--- a/src/databaseproject/layout/Login.fxml
+++ b/src/databaseproject/layout/Login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="295.0" prefWidth="272.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="databaseproject.LoginController">
+<VBox prefHeight="295.0" prefWidth="272.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="databaseproject.layoutcontroller.LoginController">
   <children>
    
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="172.0" prefWidth="296.0" VBox.vgrow="ALWAYS">
