--- a/src/databaseproject/layout/MainView.fxml
+++ b/src/databaseproject/layout/MainView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"fx:controller="databaseproject.layoutcontroller.MainViewController">
+<VBox prefHeight="554.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="databaseproject.layoutcontroller.MainViewController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -21,26 +22,29 @@
                   <MenuItem mnemonicParsing="false" text="Quit" />
           </items>
         </Menu>
-        <Menu onAction="#handleMenuClick" id="moreselect" fx:id="moreselect" mnemonicParsing="false" text="Help" >
+        <Menu id="moreselect" fx:id="moreselect" mnemonicParsing="false" onAction="#handleMenuClick" text="Help">
           <items>
-            <MenuItem onAction="#handleMenuClick" id="helpselect" fx:id="helpselect"  mnemonicParsing="false" text="About MDY&amp;G DB" />
+            <MenuItem id="helpselect" fx:id="helpselect" mnemonicParsing="false" onAction="#handleMenuClick" text="About MDY&amp;G DB" />
           </items>
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="519.0" prefWidth="659.0" VBox.vgrow="ALWAYS">
       <children>
-            <TableView layoutX="12.0" layoutY="73.0" prefHeight="277.0" prefWidth="616.0">
+            <TableView layoutX="14.0" layoutY="130.0" prefHeight="388.0" prefWidth="540.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
+                <TableColumn prefWidth="228.0" text="Name" />
+                <TableColumn prefWidth="111.0" text="ID" />
+                  <TableColumn prefWidth="101.0" text="Role" />
+                  <TableColumn prefWidth="97.0" text="Delegation" />
               </columns>
             </TableView>
-            <Text layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Youre logged in now!">
+            <Text layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello Montrell!">
                <font>
                   <Font size="29.0" />
                </font>
             </Text>
+            <Button layoutX="355.0" layoutY="89.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="199.0" text="Download Student List" />
       </children>
     </AnchorPane>
   </children>
